flux-like architecture and first draft of graph

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html class="nojs">
+<html>
 <head lang="en">
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>vg15</title>
     <script src="bundle.js"></script>
 </head>
