move to webpack

--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="utf-8" />
-    <title>vg15</title>
-    <script src="bundle.js"></script>
-</head>
-<body>
-</body>
-</html>
+<meta charset="utf-8">
+<script src="http://localhost:8080/webpack-dev-server.js"></script>
+<script type="text/javascript" src="http://localhost:8080/assets/bundle.js"></script>
+
